--- a/PMApp/package.json
+++ b/PMApp/package.json
@@ -16,12 +16,14 @@
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
+    "@angular/fire": "^7.4.1",
     "@angular/forms": "^14.0.0",
     "@angular/material": "^14.2.2",
     "@angular/material-moment-adapter": "^14.2.3",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "firebase": "^9.12.1",
     "moment": "^2.29.4",
     "primeflex": "^3.2.1",
     "primeicons": "^6.0.1",
