--- a/PMApp/package.json
+++ b/PMApp/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "chart.js": "^3.9.1",
     "firebase": "^9.12.1",
     "moment": "^2.29.4",
     "primeflex": "^3.2.1",
