--- a/PMApp/angular.json
+++ b/PMApp/angular.json
@@ -56,13 +56,19 @@
               ],
               "outputHashing": "all"
             },
-            "development": {
+            "local": {
               "buildOptimizer": false,
               "optimization": false,
               "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
-              "namedChunks": true
+              "namedChunks": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.local.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -73,11 +79,11 @@
             "production": {
               "browserTarget": "PMApp:build:production"
             },
-            "development": {
-              "browserTarget": "PMApp:build:development"
+            "local": {
+              "browserTarget": "PMApp:build:local"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "local"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
