--- a/PMApp/package.json
+++ b/PMApp/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "start:local": "ng serve --proxy-config proxy.config.json",
-    "build": "ng build",
+    "build": "ng build -c=production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
